# 6DOF_Aircraft_Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: DELTA_Aircraft.txt
doc/: 6DOF_Aircraft_Simulator.tex  ref.bib
odeint_test/: 1dproblem  1dproblem.cpp  lorenz
src/: Aircraft.cpp  Aircraft.h  CMakeCache.txt  main  main.cpp  main_Integrator.cpp  num_integrator_demo.cpp  odetest  odetest.cpp  plot_results.gnuplot
src/lib/matrixLibrary/: Mat.cpp  Mat.h
src/lib/numericalInegrator/: ERK.cpp  ERK.h  Ode.h
src/lib/numericalIntegrator/: ERK.cpp  ERK.h  Ode.h
